--- a/angular.json
+++ b/angular.json
@@ -22,8 +22,13 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ],
+
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -79,12 +84,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ]
+            "styles": ["src/styles.css"]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "b8c3d7fb-c5d1-4ea5-9cb0-2b355553ef30"
   }
 }
