--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/ssr": "^20.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
