--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.5.0",
+    "classlist.js": "^1.1.20150312",
     "express": "^5.1.0",
+    "intl-tel-input": "^25.10.10",
     "ng2-charts": "^8.0.0",
+    "ngx-intl-tel-input": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
