--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "classlist.js": "^1.1.20150312",
     "express": "^5.1.0",
     "intl-tel-input": "^25.10.10",
+    "lucide": "^0.544.0",
+    "lucide-angular": "^0.544.0",
     "ng2-charts": "^8.0.0",
     "ngx-intl-tel-input": "^17.0.0",
     "rxjs": "~7.8.0",
